--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,32 +1,44 @@
-name: Deploy to Azure VM
+name: Azure Infrastructure and Docker Deploy
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
 
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Setup SSH
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_wrapper: false
+
+      - name: Terraform Init and Apply
+        working-directory: ./terraform
+        run: |
+          terraform init
+          terraform apply -auto-approve -var="ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}"
+          echo "VM_IP=$(terraform output -raw vm_public_ip)" >> $GITHUB_ENV
+
+      - name: Setup SSH Key for Ansible
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
-          ssh-keyscan -H 20.101.123.118 >> ~/.ssh/known_hosts
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
 
-      - name: Deploy to VM
+      - name: Run Ansible Playbook
+        working-directory: ./ansible
         run: |
-          ssh -o StrictHostKeyChecking=no azureuser@20.101.123.118 << 'EOF'
-            cd ~/devops-azure-docker-project
-            git pull origin main
-            cd app
-            sudo docker rm -f devops-container || true
-            sudo docker build -t devops-app .
-            sudo docker run -d -p 80:80 --name devops-container --restart always devops-app
-          EOF
+          ansible-playbook -i "${{ env.VM_IP }}," docker-install.yml \
+          --user azureuser \
+          --private-key ~/.ssh/id_rsa \
+          --ssh-common-args='-o StrictHostKeyChecking=no'
