--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,52 +7,15 @@ on:
       - main
 
 jobs:
-  terraform:
+  ansible:
     runs-on: ubuntu-latest
-
-    env:
-      ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-      ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-      ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-      ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_wrapper: false
-
-      - name: Terraform Init
-        working-directory: ./terraform
-        run: terraform init -upgrade
-
-      - name: Terraform Plan
-        working-directory: ./terraform
-        run: terraform plan -var="ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}"
-
-      - name: Terraform Apply
-        working-directory: ./terraform
-        run: |
-          terraform apply -auto-approve -var="ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}"
-          echo "VM_IP=$(terraform output -raw vm_public_ip)" >> $GITHUB_ENV
-
-      - name: Wait for SSH to become available
-        run: |
-          for i in {1..20}; do
-            nc -zv ${{ env.VM_IP }} 22 && break
-            echo "Waiting for SSH..."
-            sleep 10
-          done
-
-      - name: Setup SSH Key
-      VM_IP: ${{ secrets.VM_IP }}
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
+
+      - name: Set VM IP from Secrets
+        run: echo "VM_IP=${{ secrets.VM_IP }}" >> $GITHUB_ENV
 
       - name: Setup SSH Private Key
         run: |
@@ -60,11 +23,11 @@ jobs:
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
-      - name: Install Ansible and Dependencies
+      - name: Install Ansible
         run: |
           sudo apt update
-          sudo apt install -y ansible python3-pip
-          ansible-galaxy collection install -r ansible/requirements.yml
+          sudo apt install -y ansible
+
       - name: Add VM to Known Hosts
         run: |
           ssh-keyscan -H ${{ env.VM_IP }} >> ~/.ssh/known_hosts
@@ -77,17 +40,10 @@ jobs:
             sleep 10
           done
 
-      - name: Install Ansible
-        run: |
-          sudo apt update
-          sudo apt install -y ansible
-
       - name: Run Ansible Playbook
         working-directory: ./ansible
         run: |
           ansible-playbook -i "${{ env.VM_IP }}," docker-install.yml \
-          --user azureuser \
-          --private-key ~/.ssh/id_rsa \
-          --ssh-common-args='-o StrictHostKeyChecking=no'
-            --user gokulshivaav \
-            --private-key ~/.ssh/id_rsa
+            --user azureuser \
+            --private-key ~/.ssh/id_rsa \
+            --ssh-common-args='-o StrictHostKeyChecking=no'
