--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,8 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Set VM IP from Secrets
-        run: echo "VM_IP=${{ secrets.VM_IP }}" >> $GITHUB_ENV
+      - name: Set VM IP as Environment Variable
+        run: echo "VM_IP=23.100.0.81" >> $GITHUB_ENV
 
       - name: Setup SSH Private Key
         run: |
