--- a/ansible/docker-install.yml
+++ b/ansible/docker-install.yml
@@ -3,6 +3,10 @@
   hosts: all
   become: yes
 
+  # Define SSH connection parameters, including necessary algorithms
+  vars:
+    ansible_ssh_common_args: "-o HostKeyAlgorithms=ssh-rsa -o StrictHostKeyChecking=no"
+
   tasks:
     - name: Update apt packages
       apt:
