--- a/ansible/docker-install.yml
+++ b/ansible/docker-install.yml
@@ -5,7 +5,7 @@
 
   # Define SSH connection parameters, including necessary algorithms
   vars:
-    ansible_ssh_common_args: "-o HostKeyAlgorithms=ssh-rsa -o StrictHostKeyChecking=no"
+    ansible_ssh_common_args: "-o HostKeyAlgorithms=rsa-sha2-512,rsa-sha2-256,ecdsa-sha2-nistp256,ssh-ed25519 -o StrictHostKeyChecking=no"
 
   tasks:
     - name: Update apt packages
