--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,18 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      # 🔥 NEW — Docker Login
+      - name: Login to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      # 🔥 NEW — Build Image from app/ folder
+      - name: Build Docker Image
+        run: docker build -t gokulshivaav/calculator-app:latest ./app
+
+      # 🔥 NEW — Push Image
+      - name: Push Docker Image
+        run: docker push gokulshivaav/calculator-app:latest
+
       - name: Set VM IP as Environment Variable
         run: echo "VM_IP=23.100.0.81" >> $GITHUB_ENV
 
@@ -27,6 +39,7 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y ansible
+          ansible-galaxy collection install community.docker
 
       - name: Add VM to Known Hosts
         run: |
