--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
 
       # 🔥 NEW — Build Image from app/ folder
       - name: Build Docker Image
-        run: docker build -t gokulshivaav/calculator-app:latest ./app
+        run: docker build --no-cache -t gokulshivaav/calculator-app:latest ./app
 
       # 🔥 NEW — Push Image
       - name: Push Docker Image
