--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,11 +20,13 @@ jobs:
 
       # 🔥 NEW — Build Image from app/ folder
       - name: Build Docker Image
-        run: docker build --no-cache -t gokulshivaav/calculator-app:latest ./app
+        run: docker build -t gokulshivaav/calculator-app:${{ github.sha }} ./app
 
-      # 🔥 NEW — Push Image
       - name: Push Docker Image
-        run: docker push gokulshivaav/calculator-app:latest
+        run: |
+          docker push gokulshivaav/calculator-app:${{ github.sha }}
+          docker tag gokulshivaav/calculator-app:${{ github.sha }} gokulshivaav/calculator-app:latest
+          docker push gokulshivaav/calculator-app:lates
 
       - name: Set VM IP as Environment Variable
         run: echo "VM_IP=23.100.0.81" >> $GITHUB_ENV
